2002-11-12  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b27

	* Tested the XP Publishing code, made a few tweaks to make it a bit
	  more presentable.  Included end-user documentation for how to use it.

2002-11-11  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.2-cvs-b26

	* Fixed escaping of line breaks in GalleryRemoteProperties.php
	
2002-11-10  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b25

	* Grant canViewFullImages to EVERYBODY by default in new Albums

	* Added publish_xp, a tool for publishing to Gallery directly from your
	  Windows XP desktop, thanks to Demian Johnston!
	
2002-11-09  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b24

	* Fixed bug #587441: wrong # of photos resized w/ hidden pics
	  Turns out that if you can resize all photos then you can also see all
	  the hidden ones.  So, resize all now applies to all photos.

2002-11-08  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b23

	* Fixed a bug in the slideshow where it was not obeying the "can view
	  full size images" permission properly (thanks to Akki)

2002-11-07  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b22

	* Changed shutterfly PSID to "GALL"

	* Suppressed some more open_basedir warnings in the config wizard.

	* Fixed bug #524944: Config Wizard allows too many rows.  Changed the default
	  rows/columns to use pulldowns instead of a text box.

	* Fixed bug #551569: edit_appearance fails under Nuke with certain
	  browsers.  We had a duplicate form tag, and the second one was bogus.

2002-11-05  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b21

	* Further fixed bugs in view_album.php where admin links were not
	  specifying the album name correctly, which would fail if the album
	  information were not getting stored in the session properly.

2002-11-04  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.2-cvs-b20

        * Bumped gallery_remote2 protocol version to 2.1.

2002-11-04  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b19
