@@ -3,6 +3,10 @@
 	* Tested the XP Publishing code, made a few tweaks to make it a bit
 	  more presentable.  Included end-user documentation for how to use it.
 
+	  The XP publishing code is only available when Gallery is running
+	  in standalone mode, because of the complexity of generating the
+	  right URLs for the browser when embedded.
+
 2002-11-11  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.2-cvs-b26
 
 	* Fixed escaping of line breaks in GalleryRemoteProperties.php
